--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
         <!-- ======== Page title ============ -->
         <title>Página no encontrada | Zentrolix</title>
         <!--<< Favcion >>-->
-        <link rel="shortcut icon" href="assets/img/favicon.svg">
+        <link rel="shortcut icon" href="assets/img/favicon.png">
         <!--<< Bootstrap min.css >>-->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <!--<< All Min Css >>-->
@@ -161,7 +161,7 @@
                         <div class="offcanvas__top mb-5 d-flex justify-content-between align-items-center">
                             <div class="offcanvas__logo">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/black-logo.svg" alt="logo-img">
+                                    <img src="assets/img/logo/logo.png" alt="logo-img">
                                 </a>
                             </div>
                             <div class="offcanvas__close">
@@ -222,10 +222,10 @@
                     <div class="header-main style-1">
                         <div class="logo">
                             <a href="index.html" class="header-logo">
-                                <img src="assets/img/logo/black-logo.svg" alt="logo-img">
+                                <img src="assets/img/logo/logo.png" alt="logo-img">
                             </a>
                             <a href="index.html" class="header-logo-2">
-                                <img src="assets/img/logo/black-logo.svg" alt="logo-img">
+                                <img src="assets/img/logo/logo.png" alt="logo-img">
                             </a>
                         </div>
                         <div class="mean__menu-wrapper">
@@ -407,7 +407,7 @@
                             <div class="pp-footer-widget-items">
                                 <div class="pp-widget-head">
                                     <a href="index.html" class="pp-footer-logo">
-                                        <img src="assets/img/logo/white-logo.svg" alt="img">
+                                        <img src="assets/img/logo/logo.png" alt="img" class="logo-white">
                                     </a>
                                 </div>
                                 <div class="pp-footer-content">
