--- a/404.html
+++ b/404.html
@@ -407,7 +407,7 @@
                             <div class="pp-footer-widget-items">
                                 <div class="pp-widget-head">
                                     <a href="index.html" class="pp-footer-logo">
-                                        <img src="assets/img/logo/logo.png" alt="img" class="logo-white">
+                                        <img src="assets/img/logo/logo.png" alt="img" class="logo-white" style="max-width: 120px; height: auto;">
                                     </a>
                                 </div>
                                 <div class="pp-footer-content">
