--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
                     <div class="pp-footer-widget-items">
                         <div class="pp-widget-head">
                             <a href="index.html" class="pp-footer-logo">
-                                <img src="assets/img/logo/logo.png" alt="img">
+                                <img src="assets/img/logo/logo.png" alt="img" class="logo-white">
                             </a>
                         </div>
                         <div class="pp-footer-content">
