--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!--<< Header Area >>-->
     <head>
-        <!-- ========== Meta Tags ========== -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,55 +18,52 @@
         <meta name="twitter:title" content="Contacto — Zentrolix">
         <meta name="twitter:description" content="Contacto Zentrolix: plataforma educativa en Argentina para aprender sobre juegos en la nube. Dirección y correo: help@zentrolix.com, Obispo Trejo 864, Córdoba.">
         <meta name="twitter:image" content="https://zentrolix.com/assets/img/logo/black-logo.svg">
-        <!-- ======== Page title ============ -->
         <title>Contacto — Zentrolix</title>
-        <!--<< Favcion >>-->
         <link rel="shortcut icon" href="assets/img/favicon.png">
-        <!--<< Bootstrap min.css >>-->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <!--<< All Min Css >>-->
         <link rel="stylesheet" href="assets/css/all.min.css">
-        <!--<< Animate.css >>-->
         <link rel="stylesheet" href="assets/css/animate.css">
-        <!--<< Magnific Popup.css >>-->
         <link rel="stylesheet" href="assets/css/magnific-popup.css">
-        <!--<< MeanMenu.css >>-->
         <link rel="stylesheet" href="assets/css/meanmenu.css">
-        <!--<< Swiper Bundle.css >>-->
         <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
-        <!--<< Nice Select.css >>-->
         <link rel="stylesheet" href="assets/css/nice-select.css">
-        <!--<< Main.css >>-->
         <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
-
-         <!-- Preloader Start -->
         <div id="preloader" class="preloader">
             <div class="animation-preloader">
                 <div class="spinner">                
                 </div>
                 <div class="txt-loading">
-                    <span data-text-preloader="C" class="letters-loading">
-                        C
+                    <span data-text-preloader="Z" class="letters-loading">
+                        Z
                     </span>
-                    <span data-text-preloader="L" class="letters-loading">
-                        L
+                    <span data-text-preloader="E" class="letters-loading">
+                        E
+                    </span>
+                    <span data-text-preloader="N" class="letters-loading">
+                        N
+                    </span>
+                    <span data-text-preloader="T" class="letters-loading">
+                        T
+                    </span>
+                    <span data-text-preloader="R" class="letters-loading">
+                        R
                     </span>
                     <span data-text-preloader="O" class="letters-loading">
                         O
                     </span>
-                    <span data-text-preloader="D" class="letters-loading">
-                        D
-                    </span>
                     <span data-text-preloader="L" class="letters-loading">
                         L
                     </span>
-                    <span data-text-preloader="Y" class="letters-loading">
-                        Y
+                    <span data-text-preloader="I" class="letters-loading">
+                        I
+                    </span>
+                    <span data-text-preloader="X" class="letters-loading">
+                        X
                     </span>
                 </div>
-                <p class="text-center">Loading</p>
+                <p class="text-center">Cargando</p>
             </div>
             <div class="loader">
                 <div class="row">
@@ -112,7 +107,7 @@
                             </div>
                         </div>
                         <p class="text d-none d-xl-block">
-                            Nullam dignissim, ante scelerisque the  is euismod fermentum odio sem semper the is erat, a feugiat leo urna eget eros. Duis Aenean a imperdiet risus.
+                            Nullam dignissim, ante scelerisque, odio semper, a feugiat leo urna eget eros.  Aenean imperdiet, duis.
                         </p>
                         <div class="mobile-menu fix mb-3"></div>
                         <div class="offcanvas__contact">
@@ -352,7 +347,7 @@
                                        </h5>
                                         <div id="faq2" class="accordion-collapse show" data-bs-parent="#accordion">
                                             <div class="accordion-body">
-                                                El gaming en la nube permite jugar videojuegos directamente desde servidores remotos sin necesidad de descargas. Los juegos se ejecutan en potentes servidores y se transmiten por streaming a tu dispositivo. Solo necesitas una conexión estable a internet para disfrutar de los últimos títulos en cualquier dispositivo.
+                                                El juego en la nube facilita el juego de videojuegos desde servidores a distancia sin la necesidad de descargar juegos.  Los juegos operan en potentes servidores y se envían a través de transmisión en directo a tu dispositivo.  Solo requieres de una conexión a internet constante para disfrutar de los títulos más recientes en cualquier aparato.
                                             </div>
                                         </div>
                                     </div>
@@ -364,7 +359,7 @@
                                         </h5>
                                         <div id="faq1" class="accordion-collapse collapse" data-bs-parent="#accordion">
                                             <div class="accordion-body">
-                                               Para una experiencia óptima en Argentina, recomendamos al menos 25 Mbps de bajada con baja latencia. La mayoría de proveedores como Telecom, Claro y Movistar ofrecen planes compatibles. Es importante tener una conexión estable y preferentemente por cable ethernet para reducir el lag.
+                                                Para una experiencia ideal en Argentina, sugerimos un mínimo de 25 Mbps de bajada con mínima latencia.  Principalmente, proveedores como Telecom, Claro y Movistar proporcionan planes compatibles.  Es fundamental mantener una conexión estable, preferiblemente a través de un cable ethernet, para disminuir el retraso.
                                             </div>
                                         </div>
                                     </div>
@@ -376,31 +371,31 @@
                                         </h5>
                                         <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#accordion">
                                             <div class="accordion-body">
-                                                En Argentina, las plataformas con mejor rendimiento incluyen Xbox Cloud Gaming, GeForce Now y Amazon Luna. Cada una tiene servidores en diferentes ubicaciones que afectan la latencia. En nuestros cursos te enseñamos cómo evaluar cuál funciona mejor según tu ubicación y proveedor de internet.
+                                                En Argentina, se encuentran entre las plataformas de mayor desempeño Xbox Cloud Gaming, GeForce Now y Amazon Luna.  Cada una cuenta con servidores en distintos lugares que influyen en la latencia.  En nuestros programas te instruimos sobre cómo determinar cuál es el más eficaz dependiendo de tu localización y proveedor de conexión a internet.
                                             </div>
                                         </div>
                                     </div>
                                     <div class="accordion-item mb-3 wow fadeInUp" data-wow-delay=".5s">
                                         <h5 class="accordion-header">
                                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4" aria-expanded="false" aria-controls="faq4">
-                                                ¿Es caro jugar en la nube comparado con comprar una consola?
+                                                ¿Es más costoso jugar en la nube que adquirir una consola?
                                             </button>
                                         </h5>
                                         <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#accordion">
                                             <div class="accordion-body">
-                                                El gaming en la nube puede ser más económico a largo plazo. Sin inversión inicial en hardware costoso, solo pagas suscripciones mensuales. Además, ahorras en compra de juegos individuales ya que muchas plataformas incluyen bibliotecas extensas.
+                                                El juego en la nube puede resultar más rentable en el largo plazo.  Sin una inversión inicial en hardware caro, simplemente abonas suscripciones mensuales.  Además, economizas al adquirir juegos individuales, dado que numerosas plataformas cuentan con amplias bibliotecas.
                                             </div>
                                         </div>
                                     </div>
                                     <div class="accordion-item mb-3 wow fadeInUp" data-wow-delay=".3s">
                                         <h5 class="accordion-header">
                                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq5" aria-expanded="false" aria-controls="faq5">
-                                                ¿Puedo usar mi mando de PS4/Xbox con el gaming en la nube?
+                                                ¿Es posible utilizar mi controlador de PS4/Xbox con el juego en la nube?
                                             </button>
                                         </h5>
                                         <div id="faq5" class="accordion-collapse collapse" data-bs-parent="#accordion">
                                             <div class="accordion-body">
-                                               ¡Absolutamente! Los mandos de PlayStation 4, PlayStation 5, Xbox One y Xbox Series funcionan perfectamente con la mayoría de servicios de gaming en la nube. También puedes usar mandos de terceros compatibles. Te explicamos cómo configurarlos paso a paso en nuestras guías.
+                                                ¡De manera absoluta!  Los controles de PlayStation 4, PlayStation 5, Xbox One y Xbox Series operan de manera óptima con la mayoría de los servicios de videojuego en la nube.  Además, puedes utilizar controles de terceros que sean compatibles.  Te detallamos cómo establecerlos de manera gradual en nuestras guías.
                                             </div>
                                         </div>
                                     </div>
@@ -412,7 +407,7 @@
                                         </h5>
                                         <div id="faq6" class="accordion-collapse collapse" data-bs-parent="#accordion">
                                             <div class="accordion-body">
-                                               Sí, ofrecemos soporte gratuito a través de nuestro email help@zentrolix.com. Nuestro equipo de expertos en gaming en la nube te ayuda con dudas sobre configuración, optimización de conexión y elección de plataformas. También tenemos una comunidad activa donde los usuarios comparten experiencias y consejos.
+                                                Claro, proporcionamos asistencia gratuita por medio de nuestro correo electrónico help@zentrolix.com.  Nuestro grupo de especialistas en juegos en la nube te asiste en tus preguntas acerca de la configuración, optimización de la conexión y selección de plataformas.  Además, contamos con una comunidad dinámica en la que los usuarios comparten sus experiencias y recomendaciones.
                                             </div>
                                         </div>
                                     </div>
@@ -435,7 +430,7 @@
                                 ¡Únete a Zentrolix y aprende sobre juegos en la nube!
                             </h2>
                             <p>
-                                Recibe guías, novedades y consejos exclusivos. Deja tu e-mail y estarás al tanto!
+                                Obtiene directrices, actualizaciones y recomendaciones únicas.  ¡Deja tu correo electrónico y estarás al día!
                             </p>
                         </div>
                         <form action="#" class="wow fadeInUp" data-wow-delay=".5s" id="newsletter-form">
@@ -457,7 +452,7 @@
                                 </div>
                                 <div class="pp-footer-content">
                                     <p>
-                                       Zentrolix — plataforma educativa en Argentina para aprender a elegir, configurar y optimizar servicios de juegos en la nube.
+                                        Zentrolix — plataforma de enseñanza en Argentina destinada a aprender a seleccionar, configurar y mejorar servicios de juegos en línea.
                                     </p>
                                   
                                 </div>
@@ -574,7 +569,7 @@
     gclidField.value = getGclid();
   }
 })();
-// Назначаю обработчик для контактной формы
+
 if (document.getElementById('contact-form1')) {
   document.getElementById('contact-form1').onsubmit = function(e) {
     e.preventDefault();
