--- a/contact.html
+++ b/contact.html
@@ -577,5 +577,8 @@ if (document.getElementById('contact-form1')) {
   };
 }
 </script>
-    </body>
+<div id="cookie-consent-banner" style="display:none;position:fixed;bottom:0;left:0;width:100%;background:#fff;border-top:1px solid #eee;padding:12px 16px;box-shadow:0 -2px 8px rgba(0,0,0,0.04);z-index:9999;font-size:15px;text-align:center;">
+  Utilizamos cookies para mejorar la experiencia del usuario. Lea nuestra <a href="privacy-policy.html" style="color:#007bff;text-decoration:underline;">Política de Privacidad</a>. <button id="cookie-accept-btn" style="margin-left:16px;padding:6px 18px;background:#222;color:#fff;border:none;border-radius:4px;cursor:pointer;">Aceptar</button>
+</div>
+</body>
 </html>
