--- a/404.html
+++ b/404.html
@@ -144,7 +144,7 @@
                     <div class="offcanvas__content">
                         <div class="offcanvas__top mb-5 d-flex justify-content-between align-items-center">
                             <div class="offcanvas__logo">
-                                <a href="index.html">
+                                <a href="/">
                                     <img src="assets/img/logo/logo.png" alt="logo-img">
                                 </a>
                             </div>
@@ -204,10 +204,10 @@
                 <div class="mega-menu-wrapper">
                     <div class="header-main style-1">
                         <div class="logo">
-                            <a href="index.html" class="header-logo">
+                            <a href="/" class="header-logo">
                                 <img src="assets/img/logo/logo.png" alt="logo-img">
                             </a>
-                            <a href="index.html" class="header-logo-2">
+                            <a href="/" class="header-logo-2">
                                 <img src="assets/img/logo/logo.png" alt="logo-img">
                             </a>
                         </div>
@@ -216,7 +216,7 @@
                                 <nav id="mobile-menu">
                                     <ul>
                                         <li class="has-dropdown active menu-thumb">
-                                            <a href="index.html">
+                                            <a href="/">
                                                 Inicio
                                             </a>
                                          
@@ -262,7 +262,7 @@
                     </div>
                     <ul class="pp-breadcrumb-items wow fadeInUp" data-wow-delay=".5s">
                     <li>
-                        <a href="index.html">
+                        <a href="/">
                             Inicio
                         </a>
                     </li>
@@ -289,7 +289,7 @@
                                 Parece que la página que buscas se ha desconectado del servidor. No te preocupes, incluso los mejores gamers se pierden a veces en el mundo virtual. ¡Volvamos al nivel principal!
                             </p>
                             <div class="error-404-actions d-flex">
-                                <a href="index.html" class="pp-theme-btn me-3">
+                                <a href="/" class="pp-theme-btn me-3">
                                     <i class="fa-solid fa-home"></i> Volver al Inicio
                                 </a>
                                 <a href="service.html" class="pp-theme-btn secondary">
@@ -317,7 +317,7 @@
                                 <i class="fa-solid fa-gamepad" style="font-size: 48px; color: #00d4ff;"></i>
                             </div>
                             <h4 class="mb-3">
-                                <a href="index.html">Inicio</a>
+                                <a href="/">Inicio</a>
                             </h4>
                             <p>Descubre todo sobre gaming en la nube</p>
                         </div>
@@ -388,7 +388,7 @@
                         <div class="col-xl-5 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay=".2s">
                             <div class="pp-footer-widget-items">
                                 <div class="pp-widget-head">
-                                    <a href="index.html" class="pp-footer-logo">
+                                    <a href="/" class="pp-footer-logo">
                                         <img src="assets/img/logo/logo.png" alt="img" class="logo-white" style="max-width: 120px; height: auto;">
                                     </a>
                                 </div>
@@ -407,7 +407,7 @@
                                 </div>
                                 <ul class="pp-list-area">
                                     <li>
-                                        <a href="index.html">
+                                        <a href="/">
                                             Inicio
                                         </a>
                                     </li>
