--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -87,7 +87,7 @@
                     <div class="offcanvas__content">
                         <div class="offcanvas__top mb-5 d-flex justify-content-between align-items-center">
                             <div class="offcanvas__logo">
-                                <a href="index.html">
+                                <a href="/">
                                     <img src="assets/img/logo/logo.png" alt="logo-img">
                                 </a>
                             </div>
@@ -147,10 +147,10 @@
                 <div class="mega-menu-wrapper">
                     <div class="header-main style-1">
                         <div class="logo">
-                            <a href="index.html" class="header-logo">
+                            <a href="/" class="header-logo">
                                 <img src="assets/img/logo/logo.png" alt="logo-img">
                             </a>
-                            <a href="index.html" class="header-logo-2">
+                            <a href="/" class="header-logo-2">
                                 <img src="assets/img/logo/logo.png" alt="logo-img">
                             </a>
                         </div>
@@ -159,7 +159,7 @@
                                 <nav id="mobile-menu">
                                     <ul>
                                         <li class="has-dropdown active menu-thumb">
-                                            <a href="index.html">
+                                            <a href="/">
                                                 Inicio
                                             </a>
                                          
@@ -206,7 +206,7 @@
                     </div>
                     <ul class="pp-breadcrumb-items wow fadeInUp" data-wow-delay=".5s">
                     <li>
-                        <a href="index.html">
+                        <a href="/">
                             Inicio
                         </a>
                     </li>
@@ -412,7 +412,7 @@
                         <div class="col-xl-5 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay=".2s">
                             <div class="pp-footer-widget-items">
                                 <div class="pp-widget-head">
-                                    <a href="index.html" class="pp-footer-logo">
+                                    <a href="/" class="pp-footer-logo">
                                         <img src="assets/img/logo/logo.png" alt="img" class="logo-white" style="max-width: 120px; height: auto;">
                                     </a>
                                 </div>
@@ -431,7 +431,7 @@
                                 </div>
                                 <ul class="pp-list-area">
                                     <li>
-                                        <a href="index.html">
+                                        <a href="/">
                                             Inicio
                                         </a>
                                     </li>
